# mrdocument

./: .gitmodules  Dockerfile.anthropic-adapter  Dockerfile.claude-code-adapter  Dockerfile.db  Dockerfile.directus-init  Dockerfile.mcp-server  Dockerfile.ocrmypdf  Dockerfile.service  Dockerfile.service-rs  Dockerfile.stt  Dockerfile.watcher  Makefile  README.md  docker-compose.claude-code.yaml  docker-compose.yaml  implementation.md  mcp.md  specifications.md  tests-documentation.md  user-guide-de.md  user-guide.md
anthropic-adapter/: Caddyfile  nginx.conf
claude-code-adapter/: server.py
directus/: init.mjs
docs-archive/: CHANGELOG_CONTEXTS.md  COLLISION_HANDLING.md  CONTEXTS.md  FILENAME_PATTERNS.md  IMPLEMENTATION.md  MULTI_USER_SETUP.md  PLAN.md  README.md  SORTER.md  TOPIC_INSTRUCTIONS.md  feature-requests.md  implementation-root-smart-folders.md  new-smartfolders.md  specs-root-smart-folders.md  test-specs.md  tests-root-smart-folders.md  user-guide-root-smart-folders-de.md  user-guide-root-smart-folders.md
examples/: smartfolders.yaml  stt.yaml
mcp-client/: .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml  system-prompt.txt  test_connection.py
mcp-client/.claude/: settings.json
mcp-client/.claude/commands/: find-references.md  find-sources.md  find.md  search-and-export.md
mcp-client/mrdocument_client/: __init__.py  launch.py  proxy.py  setup.py
mcp-client/mrdocument_client/skills/: search-and-export.md
mcp-server/: pyproject.toml
mcp-server/mcp_server/: __init__.py  auth.py  contexts.py  db.py  health.py  models.py  query_dsl.py  server.py  tools.py
mcp-server/tests/: conftest.py  test_auth.py  test_contexts.py  test_integration_db.py  test_query_dsl.py  test_sse_session.py  test_tools.py
ocrmypdf/: README.md  api.py
service/: .gitignore  README.md  pyproject.toml
service-rs/: Cargo.toml  config.yaml  pricing.yaml
service-rs/src/: ai.rs  config.rs  costs.rs  docx.rs  eml.rs  html_convert.rs  image_convert.rs  main.rs  ocr.rs  pdf.rs  rtf_convert.rs  transcript.rs  truncate.rs
service/mrdocument/: __init__.py  ai.py  costs.py  docx_utils.py  eml.py  html_convert.py  image.py  ocr.py  pdf.py  rtf_convert.py  server.py  transcript.py
service/tests/: __init__.py  test_integration.py
stt/: .gitignore  README.md  README_API.md  pyproject.toml  specs.md
stt/stt_cli/: __init__.py  api.py  cli.py  config.py  convert.py  output.py  postprocess.py  transcript.py
stt/stt_cli/backends/: __init__.py  elevenlabs.py
tests/integration/: .env.example  Dockerfile  Dockerfile.mock-anthropic  Dockerfile.mock-directus  Dockerfile.mock-elevenlabs  Dockerfile.mock-ocr  Dockerfile.mock-stt  Makefile  TODO-integration-tests.md  conftest.py  docker-compose.fast.yaml  docker-compose.service-mock.yaml  docker-compose.test.yaml  entrypoint.sh  generate_audio.py  generate_documents.py  mock_anthropic.py  mock_backends.py  mock_directus.py  mock_elevenlabs.py  mock_ocr.py  mock_stt.py  pyproject.toml  supervisord.conf  supervisord.service-mock.conf  test_audio.py  test_config.yaml  test_config_fast.yaml  test_content.py  test_costs.py  test_credentials.py  test_directus.py  test_documents.py  test_extract_text.py  test_lifecycle.py  test_mcp_server.py  test_stt.py  test_transcript_chunking.py  watcher-fast.yaml  watcher-test.yaml
tests/integration/config/: config.yaml
tests/integration/config/sorted/arbeit/: context.yaml  smartfolders.yaml
tests/integration/config/sorted/privat/: context.yaml
tests/integration/config/sorted/privat_with_sender/: context.yaml
tests/integration/config/sorted/testctx/: context.yaml
tests/integration/fixture_tests/: conditional_filename_ai_disagrees.yaml  db_external_needs_deletion.yaml  db_external_reprocess.yaml  duplicate_incoming.yaml  empty_text_image_error.yaml  error_handling_recovery.yaml  incoming_arbeit_pdf.yaml  incoming_arbeit_rtf.yaml  incoming_arbeit_txt.yaml  incoming_privat_pdf.yaml  incoming_privat_rtf.yaml  incoming_privat_txt.yaml  insufficient_text_error.yaml  invalid_candidate_error.yaml  invalid_context_error.yaml  missing_file_detection.yaml  missing_file_reappears.yaml  missing_source_recovery.yaml  reclassify_hash_match.yaml  reclassify_move_processed.yaml  reclassify_no_match.yaml  reclassify_source_hash.yaml  reset_arbeit_pdf.yaml  reset_arbeit_txt.yaml  reset_privat_pdf.yaml  sorted_ai_disagrees_m4a.yaml  sorted_ai_disagrees_pdf.yaml  sorted_ai_disagrees_txt.yaml  sorted_context_change_arbeit_to_privat.yaml  sorted_context_change_privat_to_arbeit.yaml  sorted_context_change_with_subfolder.yaml  sorted_correct_arbeit_pdf.yaml  sorted_correct_arbeit_rtf.yaml  sorted_correct_arbeit_txt.yaml  sorted_correct_privat_pdf.yaml  sorted_correct_privat_rtf.yaml  sorted_correct_privat_txt.yaml  sorted_new_candidate_if_allowed.yaml  sorted_wrong_arbeit_to_privat_pdf.yaml  sorted_wrong_arbeit_to_privat_rtf.yaml  (+15 more)
tests/integration/fixtures/: __init__.py  loader.py  runner.py  scanner.py
tests/integration/syncthing/: Dockerfile.client  Dockerfile.server  config_example.xml  generate_config.sh
tests/integration/syncthing/client/: cert.pem  config.xml  key.pem
tests/integration/syncthing/server/: cert.pem  config.xml  key.pem
tests/integration/testdata/: .gitignore
watcher-rs/: Cargo.toml  build.rs  entrypoint.sh
watcher-rs/src/: config.rs  db.rs  directus.rs  lib.rs  main.rs  models.rs  orchestrator.rs  prefilter.rs  step1.rs  step2.rs  step3.rs  step4.rs  step5.rs  step6.rs  step7.rs
(+64 files in other folders)
