[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
anyhow = "1"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
lopdf = "0.34"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
glob = "0.3"
regex = "1"
base64 = "0.22"
hex = "0.4"
unicode-normalization = "0.1"
once_cell = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 2
lto = "thin"
