[tool.poetry]
name = "mrdocument-integration-tests"
version = "0.1.0"
description = "Integration tests for MrDocument"
authors = ["Developer"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-timeout = "^2.2.0"
pyyaml = "^6.0"
reportlab = "^4.0.0"
gtts = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
